v0.3.0/_sources/projections/nongeo/cartesian_linear.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/nongeo/cartesian_linear.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_projections_nongeo_cartesian_linear.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_nongeo_cartesian_linear.py:


Cartesian linear
================

**X**\ *width*/[*height*]: Give the *width* of the figure and the optional *height*.

.. GENERATED FROM PYTHON SOURCE LINES 7-22



.. image:: /projections/nongeo/images/sphx_glr_cartesian_linear_001.png
    :alt: cartesian linear
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <IPython.core.display.Image object>





|

.. code-block:: default

    import pygmt

    fig = pygmt.Figure()
    fig.plot(
        # The ``x`` and ``y`` arguments determine the coordinates of lines
        x=[3, 9, 2],
        y=[4, 9, 37],
        pen="3p,red",
        # ``region`` sets the x and y ranges or the Cartesian figure.
        region=[0, 10, 0, 50],
        projection="X15c/10c",
        # ``WSne`` is passed to ``frame`` to put axis labels only on the left and bottom axes.
        frame=["af", "WSne"],
    )
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.092 seconds)


.. _sphx_glr_download_projections_nongeo_cartesian_linear.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: cartesian_linear.py <cartesian_linear.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: cartesian_linear.ipynb <cartesian_linear.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
